tests/neg/i6061.scala
opaque object // ...


// error: modifier `opaque` not allowed // error